# mangadex-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cicd.yml
examples/: simple.rs
src/: client.rs  lib.rs  main.rs  request.rs  session.rs  types.rs
tests/: test_models.rs
