[package]
name = "mangadex_rust"
version = "0.1.0"
authors = ["Johnny Huang <ijohnnyh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
log = "0.4.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
